UI & Reveal Animation Update

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,39 @@ code {
     monospace;
 }
 
+@layer components {
+  .btn-37 {
+    @apply relative block p-4 px-16 overflow-hidden text-primary-60 bg-secondary-30 uppercase cursor-pointer;
+  }
+  .btn-37 .new {
+    @apply font-black scale-0 transition-transform duration-200;
+  }
+  .btn-37:hover .new {
+    @apply scale-100;
+  }
+  .btn-37 .old {
+    @apply absolute inset-0;
+  }
+  .btn-37 .old span {
+    @apply block grid place-items-center absolute inset-0 bg-primary-60 text-white font-black transition-transform duration-200;
+  }
+  .btn-37 .old span:first-child {
+    clip-path: polygon(0 0, 51% 0, 51% 100%, 0 100%);
+  }
+  .btn-37 .old span:nth-child(2) {
+    clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
+  }
+  .btn-37:hover .old span:first-child {
+    @apply -translate-y-full;
+  }
+  .btn-37:hover .old span:nth-child(2) {
+    @apply translate-y-full;
+  }
+}
+
+@layer components {
+  .wrap-input-1 .input:focus ~ .focus-border {
+    width: 100%;
+  }
+}
+
